--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,13 +22,23 @@
   font-size:large; */
   }
 
+  #tarjeta { background: black;
+    padding: 100px; 
+    color: white; }
   
+  .selector_letra{
+  font-family: "Cabin", sans-serif ;  
+  font-weight: 50;
+  /* font-style: normal; */
+  /* font-size: small; */
+  }
   .img { width : 50%;}  
   
   .bg-fondo_sub{
-    background-color: #DC3545;
+    background-color: black;
   }
-        
+  
   .letra{
     color:white
   }
+  
